{
  "version": 4,
  "terraform_version": "0.12.4",
  "serial": 36,
  "lineage": "bf80aaa7-5e3b-e687-bed1-011c32fcd3bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "MainRoutingTable-VPC100",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-09d5f2f77d3ffd1f7",
            "id": "rtb-09d5f2f77d3ffd1f7",
            "owner_id": "120586924283",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MainRoutingTable-VPC100"
            },
            "vpc_id": "vpc-015b6cabed47e1ff9"
          },
          "depends_on": [
            "aws_vpc.VPC100"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-EIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0172f36f8a6c00873",
            "domain": "vpc",
            "id": "eipalloc-0bc7e03568e7bd730",
            "network_interface": "eni-07fc05cf4064c8aca",
            "private_dns": "ip-172-16-0-84.ec2.internal",
            "private_ip": "172.16.0.84",
            "public_dns": "ec2-54-144-111-227.compute-1.amazonaws.com",
            "public_ip": "54.144.111.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02666d31e797d5190",
            "arn": "arn:aws:ec2:us-east-1:120586924283:instance/i-03b265d45aa541624",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03b265d45aa541624",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testlab",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a11f9346590617a8",
            "private_dns": "ip-172-16-0-98.ec2.internal",
            "private_ip": "172.16.0.98",
            "public_ip": "34.238.150.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0bf331f797686a9dc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0572980d79e246b70",
            "tags": {
              "Name": "WS1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-031e4912d841db284"
            ]
          },
          "depends_on": [
            "aws_security_group.windowsVM",
            "aws_subnet.Public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windowsPrivate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02666d31e797d5190",
            "arn": "arn:aws:ec2:us-east-1:120586924283:instance/i-06eb327f52281f194",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06eb327f52281f194",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testlab",
            "monitoring": false,
            "primary_network_interface_id": "eni-02cddeeaf02d65c96",
            "private_dns": "ip-172-16-1-174.ec2.internal",
            "private_ip": "172.16.1.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-09d2a3d907e451208",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01088546992138f01",
            "tags": {
              "Name": "DB1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-031e4912d841db284"
            ]
          },
          "depends_on": [
            "aws_security_group.windowsVM",
            "aws_subnet.Private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02ad994b1e0afc7f8",
            "owner_id": "120586924283",
            "tags": {
              "Name": "VPC100"
            },
            "vpc_id": "vpc-015b6cabed47e1ff9"
          },
          "depends_on": [
            "aws_vpc.VPC100"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc7e03568e7bd730",
            "id": "nat-0a73e75081fc4157d",
            "network_interface_id": "eni-07fc05cf4064c8aca",
            "private_ip": "172.16.0.84",
            "public_ip": "54.144.111.227",
            "subnet_id": "subnet-0572980d79e246b70",
            "tags": {
              "Name": "NATgwVPC100"
            }
          },
          "depends_on": [
            "aws_eip.NAT-EIP",
            "aws_subnet.Public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c2df133f512aafe6",
            "owner_id": "120586924283",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a73e75081fc4157d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRoutingTable"
            },
            "vpc_id": "vpc-015b6cabed47e1ff9"
          },
          "depends_on": [
            "aws_nat_gateway.ngw",
            "aws_vpc.VPC100"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b4cddba49cdd569a",
            "owner_id": "120586924283",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ad994b1e0afc7f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoutingTable"
            },
            "vpc_id": "vpc-015b6cabed47e1ff9"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.VPC100"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0017df8388d38b3a6",
            "route_table_id": "rtb-0b4cddba49cdd569a",
            "subnet_id": "subnet-0572980d79e246b70"
          },
          "depends_on": [
            "aws_route_table.rt",
            "aws_subnet.Public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e6c9fdaa3f47b13",
            "route_table_id": "rtb-0c2df133f512aafe6",
            "subnet_id": "subnet-01088546992138f01"
          },
          "depends_on": [
            "aws_route_table.privatert",
            "aws_subnet.Private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windowsVM",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120586924283:security-group/sg-031e4912d841db284",
            "description": "Enable RDP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031e4912d841db284",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "windowsVM",
            "name_prefix": null,
            "owner_id": "120586924283",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-015b6cabed47e1ff9"
          },
          "depends_on": [
            "aws_vpc.VPC100"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120586924283:subnet/subnet-01088546992138f01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-01088546992138f01",
            "map_public_ip_on_launch": false,
            "owner_id": "120586924283",
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-015b6cabed47e1ff9"
          },
          "depends_on": [
            "aws_vpc.VPC100"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120586924283:subnet/subnet-0572980d79e246b70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-0572980d79e246b70",
            "map_public_ip_on_launch": false,
            "owner_id": "120586924283",
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-015b6cabed47e1ff9"
          },
          "depends_on": [
            "aws_vpc.VPC100"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC100",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120586924283:vpc/vpc-015b6cabed47e1ff9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a1156c2dbb0648a2",
            "default_route_table_id": "rtb-09d5f2f77d3ffd1f7",
            "default_security_group_id": "sg-07a7c71e96d0b38a4",
            "dhcp_options_id": "dopt-9f2b3ce4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-015b6cabed47e1ff9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d5f2f77d3ffd1f7",
            "owner_id": "120586924283",
            "tags": {
              "Name": "VPC100"
            }
          }
        }
      ]
    }
  ]
}